--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <p>maths notes</p>
-    <a href="/note1.txt">notes1</a>
+    <a href="apm-notes/note1.txt">notes1</a>
 </body>
 </html>
